server/src/search_executor/snapshots/navigatum_server__search_executor__test__bad_queries-9.snap
---
source: server/src/search_executor/mod.rs
description: ""
expression: actual
info: "'CH22209' should get '5402.01.220J' in 1 results"
---
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: rooms
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
